networkpolicy/networkpolicy__basic_kafka_setup__strimzi__to__minio__egress__ports__9000__nr36__lines18.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: strimzi--to--minio--egress--ports--9000--nr36
  namespace: strimzi
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          stacktic.io/namespace: minio
    ports:
    - protocol: TCP
      port: 9000
